mvn Test  stage