@@ -21,7 +21,7 @@ pipeline {
         stage('Maven Test') {
             steps {
                 echo 'Maven Test started'
-                sh 'mvn test'
+                sh 'export MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED" && mvn test'
             }
         }
     }
